# weather-notif-scheduler

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
