[package]
name = "weather-notif-scheduler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cronjob = "0.4.17"
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread"] }
